# Atchima

./: Cargo.toml  README.md
assets/RON_files/: atchima.setup.ron
assets/maps/: TS_dirt.tsx  TS_forest_bit.tsx  TS_grass.tsx  TS_shadows.tsx  TS_trees.tsx  TS_trees_single.tsx  first_map.tmx
src/: main.rs
src/config/: components.rs
src/game/: entities.rs  mod.rs  player.rs  world.rs
