[package]
name = "Atchima"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
bevy = { version = "0.18.1", features = ["debug"] }
bevy_spritesheet_animation = "6.1.0"
bevy_common_assets = { version = "0.16.0", features = ["ron"] }
bevy_ecs_tiled = { version = "0.11.4", features = ["rapier"] }
